{
  "version": 4,
  "terraform_version": "1.15.7",
  "serial": 26,
  "lineage": "1ba0d6da-031a-be70-f511-b249698aead4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0e5497a77ef21b5ac",
            "arn": "arn:aws:ec2:us-east-2:620969609235:instance/i-08886e8f7d632027c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08886e8f7d632027c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-006bc41038bf677df"
              }
            ],
            "primary_network_interface_id": "eni-006bc41038bf677df",
            "private_dns": "ip-192-168-1-13.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.1.13",
            "public_ip": "13.59.240.143",
            "region": "us-east-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08c2494c8b6496637",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f14cd536c8a6dcb8",
            "tags": {
              "Name": "my_instance"
            },
            "tags_all": {
              "Name": "my_instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0da65480a543835aa"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "620969609235",
            "id": "i-08886e8f7d632027c",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.my_security_group",
            "aws_subnet.public_subnet1",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_instance2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0e5497a77ef21b5ac",
            "arn": "arn:aws:ec2:us-east-2:620969609235:instance/i-0ec7d055e8ecd1fd1",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ec7d055e8ecd1fd1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0dd7fbee050b8efea"
              }
            ],
            "primary_network_interface_id": "eni-0dd7fbee050b8efea",
            "private_dns": "ip-192-168-2-207.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.2.207",
            "public_ip": "18.224.23.100",
            "region": "us-east-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0cf236e7561e6a357",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-081b7c3d7d72d087c",
            "tags": {
              "Name": "my_instance2"
            },
            "tags_all": {
              "Name": "my_instance2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0da65480a543835aa"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "620969609235",
            "id": "i-0ec7d055e8ecd1fd1",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.my_security_group",
            "aws_subnet.public_subnet2",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:620969609235:internet-gateway/igw-056bade5e4b9769c5",
            "id": "igw-056bade5e4b9769c5",
            "owner_id": "620969609235",
            "region": "us-east-2",
            "tags": {
              "Name": "my_vpc_igw"
            },
            "tags_all": {
              "Name": "my_vpc_igw"
            },
            "vpc_id": "vpc-03901aa8116edbc74"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "620969609235",
            "id": "igw-056bade5e4b9769c5",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "my_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:620969609235:loadbalancer/app/my-lb/0a99d2894768fcee",
            "arn_suffix": "app/my-lb/0a99d2894768fcee",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "my-lb-1176795987.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_prefix_for_ipv6_source_nat": "off",
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:620969609235:loadbalancer/app/my-lb/0a99d2894768fcee",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "my-lb",
            "preserve_host_header": false,
            "region": "us-east-2",
            "security_groups": [
              "sg-06abfa62d2608f695"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-081b7c3d7d72d087c"
              },
              {
                "subnet_id": "subnet-0f14cd536c8a6dcb8"
              }
            ],
            "subnets": [
              "subnet-081b7c3d7d72d087c",
              "subnet-0f14cd536c8a6dcb8"
            ],
            "tags": {
              "Name": "my_lb"
            },
            "tags_all": {
              "Name": "my_lb"
            },
            "vpc_id": "vpc-03901aa8116edbc74",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:620969609235:loadbalancer/app/my-lb/0a99d2894768fcee"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnet1",
            "aws_subnet.public_subnet2",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "my_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:620969609235:listener/app/my-lb/0a99d2894768fcee/69f780232cdda9b8",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:620969609235:targetgroup/my-target-group/744169b791a1208f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:620969609235:listener/app/my-lb/0a99d2894768fcee/69f780232cdda9b8",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:620969609235:loadbalancer/app/my-lb/0a99d2894768fcee",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-2",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:620969609235:listener/app/my-lb/0a99d2894768fcee/69f780232cdda9b8"
          },
          "dependencies": [
            "aws_lb.my_lb",
            "aws_lb_target_group.my_target_group",
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnet1",
            "aws_subnet.public_subnet2",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "my_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:620969609235:targetgroup/my-target-group/744169b791a1208f",
            "arn_suffix": "targetgroup/my-target-group/744169b791a1208f",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-299",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:620969609235:targetgroup/my-target-group/744169b791a1208f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-2:620969609235:loadbalancer/app/my-lb/0a99d2894768fcee"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "my-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "my_target_group"
            },
            "tags_all": {
              "Name": "my_target_group"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-03901aa8116edbc74"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:620969609235:targetgroup/my-target-group/744169b791a1208f"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "my_target_group_attachment1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:620969609235:targetgroup/my-target-group/744169b791a1208f,i-08886e8f7d632027c,80",
            "port": 80,
            "region": "us-east-2",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:620969609235:targetgroup/my-target-group/744169b791a1208f",
            "target_id": "i-08886e8f7d632027c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "620969609235",
            "port": 80,
            "region": "us-east-2",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:620969609235:targetgroup/my-target-group/744169b791a1208f",
            "target_id": "i-08886e8f7d632027c"
          },
          "dependencies": [
            "aws_instance.my_instance",
            "aws_lb_target_group.my_target_group",
            "aws_security_group.alb_sg",
            "aws_security_group.my_security_group",
            "aws_subnet.public_subnet1",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "my_target_group_attachment2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:620969609235:targetgroup/my-target-group/744169b791a1208f,i-0ec7d055e8ecd1fd1,80",
            "port": 80,
            "region": "us-east-2",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:620969609235:targetgroup/my-target-group/744169b791a1208f",
            "target_id": "i-0ec7d055e8ecd1fd1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "620969609235",
            "port": 80,
            "region": "us-east-2",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:620969609235:targetgroup/my-target-group/744169b791a1208f",
            "target_id": "i-0ec7d055e8ecd1fd1"
          },
          "dependencies": [
            "aws_instance.my_instance2",
            "aws_lb_target_group.my_target_group",
            "aws_security_group.alb_sg",
            "aws_security_group.my_security_group",
            "aws_subnet.public_subnet2",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:620969609235:route-table/rtb-03132bd2136b56d6f",
            "id": "rtb-03132bd2136b56d6f",
            "owner_id": "620969609235",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-056bade5e4b9769c5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my_public_route_table"
            },
            "tags_all": {
              "Name": "my_public_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-03901aa8116edbc74"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "620969609235",
            "id": "rtb-03132bd2136b56d6f",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-091e81882085be414",
            "region": "us-east-2",
            "route_table_id": "rtb-03132bd2136b56d6f",
            "subnet_id": "subnet-0f14cd536c8a6dcb8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "620969609235",
            "id": "rtbassoc-091e81882085be414",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet1",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet2_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bbaaa339a9ba3173",
            "region": "us-east-2",
            "route_table_id": "rtb-03132bd2136b56d6f",
            "subnet_id": "subnet-081b7c3d7d72d087c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "620969609235",
            "id": "rtbassoc-0bbaaa339a9ba3173",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet2",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:620969609235:security-group/sg-06abfa62d2608f695",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06abfa62d2608f695",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "620969609235",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03901aa8116edbc74"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "620969609235",
            "id": "sg-06abfa62d2608f695",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:620969609235:security-group/sg-0da65480a543835aa",
            "description": "Allow SSH and HTTP traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0da65480a543835aa",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06abfa62d2608f695"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "my_security_group",
            "name_prefix": "",
            "owner_id": "620969609235",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my_security_group"
            },
            "tags_all": {
              "Name": "my_security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-03901aa8116edbc74"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "620969609235",
            "id": "sg-0da65480a543835aa",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:620969609235:subnet/subnet-0f14cd536c8a6dcb8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f14cd536c8a6dcb8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "620969609235",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "my_public_subnet1"
            },
            "tags_all": {
              "Name": "my_public_subnet1"
            },
            "vpc_id": "vpc-03901aa8116edbc74"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "620969609235",
            "id": "subnet-0f14cd536c8a6dcb8",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:620969609235:subnet/subnet-081b7c3d7d72d087c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-081b7c3d7d72d087c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "620969609235",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "my_public_subnet2"
            },
            "tags_all": {
              "Name": "my_public_subnet2"
            },
            "vpc_id": "vpc-03901aa8116edbc74"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "620969609235",
            "id": "subnet-081b7c3d7d72d087c",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:620969609235:vpc/vpc-03901aa8116edbc74",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-09a0f724ff7ca2c4a",
            "default_route_table_id": "rtb-07b574d618a4efdd1",
            "default_security_group_id": "sg-02715d144b1e61a33",
            "dhcp_options_id": "dopt-0a7d8aa4a061b0f9f",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03901aa8116edbc74",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07b574d618a4efdd1",
            "owner_id": "620969609235",
            "region": "us-east-2",
            "tags": {
              "Name": "my_vpc"
            },
            "tags_all": {
              "Name": "my_vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "620969609235",
            "id": "vpc-03901aa8116edbc74",
            "region": "us-east-2"
          }
        }
      ]
    }
  ]
}